# bbsreader

./: .gitignore  README.md
Electron/: index.html  main.js  package.json
OSX/BBSReader/: AppDelegate.swift  BoardViewController.swift  ConViewController.swift  ContentViewController.swift  DocViewController.swift  Info.plist  ListViewController.swift  MainViewController.swift  MetaData.swift  ReadViewController.swift  ReaderView.swift
OSX/BBSReader.xcodeproj/: project.pbxproj
Python3/: Untitled.ipynb  bbsreader_lib.py  cool18.py  cspell.config.yaml  delete_article.py  download_detail.py  fix.py  group.py  liuchao.bat  login_sexinsex.py  project-words.txt  pyproject.toml  reauthor.py  rehash.py  requirements.txt  update.bat  update.ipynb  update.py
Python3/bbsreader/: bbsreader_lib.py  cool18.py  delete_article.py  download_detail.py  fix.py  group.py  reauthor.py  rehash.py  update.py  upgrade_sktype.py
Python3/bbsreader/utils/: manual_topic.py  misc.py  superkeyword.py  tag.py  thread.py
Python3/group_func/: grouping.py  utils.py
Python3/utils/: __init__.py  misc.py  tag.py  tags.py  thread.py
Windows/: BBSReader.sln
Windows/BBSReader/: AdvancedKeywordDialog.xaml  AdvancedKeywordDialog.xaml.cs  AliasEditDialog.xaml  AliasEditDialog.xaml.cs  App.xaml  App.xaml.cs  AuthorEditDialog.xaml  AuthorEditDialog.xaml.cs  BBSReader.csproj  ConsoleManger.cs  Constants.cs  CoverDownloader.xaml  CoverDownloader.xaml.cs  DownloadDialog.xaml  DownloadWindow.xaml  (+24 more)
chrome/: background.js  content-script.js  main-page.html  main-page.js  manifest.json  popup.html  popup.js
(+24 files in other folders)
